# exploring_cnc

./: .gitignore  404.html  CLAUDE.md  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yaml  pyproject.toml  robots.txt  sitemap.xml
axes_and_coordinate_systems/: index.html
docs/: CNAME  axes_and_coordinate_systems.md  index.md  reading_gcode_basics.md
docs/essential/: axes_and_coordinate_systems.md  reading_gcode_basics.md
reading_gcode_basics/: index.html
search/: search_index.json
