[project]
name = "exploring-cnc"
version = "0.1.0"
description = "CNC machining from first principles — coordinate systems, G-code, CAD/CAM with FreeCAD, and open-source machine control."
authors = [
    {name = "Brad Penney",email = "penney.brad@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material[imaging] (>=9.6.14,<10.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pymdown-extensions (>=10.15,<11.0)",
    "mkdocs-htmlproofer-plugin (>=1.4.0,<2.0.0)",
    "mkdocs-exclude (>=1.0.2,<2.0.0)",
    "mkdocs-rss-plugin (>=1.19.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
